--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Файлы окружения с конфиденциальными данными
+.env
+
+# Временные файлы Python
 __pycache__/
 *.py[cod]
 *$py.class
@@ -19,6 +23,11 @@ var/
 .installed.cfg
 *.egg
 
+# Файлы базы данных SQLite
+nutrilife.db
+
+# Папка с медиафайлами (видео, изображения)
+data/
 
 # Логи и временные файлы
 logs/
